manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app-pod
  template:
    metadata:
      labels:
        app: web-app-pod
    spec:
      containers:
      - name: web-app-test
        image: default-route-openshift-image-registry.apps.rm1.0a51.p1.openshiftapps.com/achevarria-dev/web-app-python:v1
        ports:
        - containerPort: 5000
